feat(gpu): got working GPU backend running on Silicon & Slang